--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TimeMaster</string>
+    <string name="app_name">TIME</string>
     <string name="weixin">微信</string>
     <string name="addressList">通讯录</string>
     <string name="find">发现</string>
